/*
 * To change this license header, choose License Headers in Project Properties.
 * To change this template file, choose Tools | Templates
 * and open the template in the editor.
 */
package ConHerencia;

/**
 *
 * @author Martín
 */
public class Entrenador extends Persona{
    private String idFederacion;
	// constructor, getter y setter
    public Entrenador() {
	super();
    }
    
    public void dirigirPartido() {
	//...	
    }
	
    public void dirigirEntreno() {
	//...
    }    
}
