/*
 * To change this license header, choose License Headers in Project Properties.
 * To change this template file, choose Tools | Templates
 * and open the template in the editor.
 */
package ConHerencia;

import java.util.ArrayList;

/**
 *
 * @author Martín
 */
public class Masajista extends Persona{
    private String Titulacion;
    private int aniosExperiencia;
    private ArrayList listMasajista;
    
    public Masajista() {
        super();
        listMasajista=new ArrayList();
    }

	// constructor, getter y setter

    
    public void darMasaje() {
	//...
    }
}
