/*
 * To change this license header, choose License Headers in Project Properties.
 * To change this template file, choose Tools | Templates
 * and open the template in the editor.
 */
package SinHerencia;

/**
 *
 * @author Martín
 */
public class Futbolista {
    private int id;
    private String Nombre;
    private String Apellidos;
    private int Edad;
    private int dorsal;
    private String demarcacion;

	// constructor, getter y setter

    public void Concentrarse() {
        //...
    }

    public void Viajar() {
//	//...
    }

    public void jugarPartido() {
	//...
    }

    public void entrenar() {
	//...
    }
    
}
